--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>polymer-bg</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
+    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
     <iron-component-page src="polymer-bg.html"></iron-component-page>
