--- a/polymer-bg.html
+++ b/polymer-bg.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.balanced-gallery.js"></script>
 
 <!--
