gallary view changed

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
 
     <div>
       <h3>Basic polymer-bg Demo</h3>
-      <polymer-bg bg-background="http://placekitten.com/335/283" ideal-width="300" bg-orientation="vertical">
+      <polymer-bg bg-background="http://placekitten.com/335/283" ideal-width="300" bg-orientation="horizontal">
         <img src="http://placekitten.com/335/283" />
         <img src="http://placekitten.com/325/596" />
         <img src="http://placekitten.com/580/365" />
